# HostGuard

./: .gitattributes  .gitignore  .oxlintrc.json  CLAUDE.md  README.md  TASKS.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-16-windows-compat.md  2026-06-17-github-auto-update-releases.md
docs/superpowers/specs/: 2026-06-16-windows-compat-design.md  2026-06-17-github-auto-update-releases-design.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src/components/: CodeEditor.vue  PagePlaceholder.vue
src/composables/: usePlatform.ts  useSystemStats.ts  useUpdater.ts
src/layouts/default/: index.vue  menu.ts
src/layouts/default/components/: SideBar.vue  WindowControls.vue
src/router/: index.ts
src/store/: app.ts  fab.ts
src/styles/: theme.css
src/types/: shims.d.ts
src/utils/: hosts.ts
src/views/dashboard/: index.vue
src/views/hosts/: index.vue
src/views/monitor/: index.vue
src/views/settings/: index.vue
src/views/shell/: index.vue
src/views/system/: index.vue
