[package]
name = "hostguard"
version = "0.0.10"
description = "HostGuard — manage hosts, shell config and system stats"
authors = ["Azir <alessandradiel743@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hostguard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
# 应用内更新：updater 从 GitHub Releases 的 latest.json 检查并安装签名更新；
# process 提供安装后 relaunch() 重启进入新版本。
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# System telemetry. `default-features = false` 精选所需采集器：system（CPU/内存/负载）、
# disk（磁盘占用）、component（温度，尽力而为，Windows 走 WMI 可能为空）。无 network/process。
sysinfo = { version = "0.33", default-features = false, features = [
  "system",
  "disk",
  "component",
] }

